updated AssignSubjectPanel